; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/rcorder/extr_ealloc.c_erealloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/rcorder/extr_ealloc.c_erealloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @erealloc(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i8* @realloc(i8* %5, i64 %6)
  store i8* %7, i8** %3, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = call i32 (...) @enomem()
  br label %11

11:                                               ; preds = %9, %2
  %12 = load i8*, i8** %3, align 8
  ret i8* %12
}

declare dso_local i8* @realloc(i8*, i64) #1

declare dso_local i32 @enomem(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
